Refactored HTMLCharacterCheckerTest